--- a/debian/rules
+++ b/debian/rules
@@ -5,9 +5,13 @@
 
 override_dh_auto_clean:
 	cargo clean
+	rm -rf .cargo vendor
 
 override_dh_auto_build:
-	cargo build --release
+	mkdir -p .cargo
+	cp debian/cargo.config .cargo/config
+	tar xJf debian/vendor.tar.xz
+	cargo build --release --frozen
 
 override_dh_auto_install:
 	install -Dm04755 "debian/helix.sh" "debian/helix/usr/bin/hx"
