--- a/debian/rules
+++ b/debian/rules
@@ -9,12 +9,12 @@ override_dh_auto_clean:
 
 override_dh_auto_build:
 	mkdir -p .cargo
-	cp debian/cargo.config .cargo/config
+	cp debian/cargo.config .cargo/config.toml
 	tar xJf debian/vendor.tar.xz
+	tar xJf debian/grammars.src.tar.xz
 	cargo build --release
 
-	tar xJf debian/grammars.src.tar.xz
-	HELIX_RUNTIME=$(CURDIR)/runtime ./target/release/hx --grammar build
+# cleanup grammar sources
 	rm -rf ./runtime/grammars/sources
 
 override_dh_auto_install:
@@ -27,7 +27,7 @@ override_dh_auto_install:
 	cp -r "runtime/themes" "debian/helix/var/lib/helix/runtime"
 	cp -r "runtime/grammars" "debian/helix/var/lib/helix/runtime"
 	install -Dm0644 "runtime/tutor" -t "debian/helix/var/lib/helix/runtime"
-	
+
 	install -Dm0644 "contrib/completion/hx.bash" "debian/helix/usr/share/bash-completion/completions/helix"
 	install -Dm0644 "contrib/completion/hx.fish" "debian/helix/usr/share/fish/vendor_completions.d/helix.fish"
 	install -Dm0644 "contrib/completion/hx.zsh" "debian/helix/usr/share/zsh/site-functions/_helix"
